--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
     "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.5",
     "debug": "^4.3.1",
+    "dotenv": "^11.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
-    "hbs": "^4.1.1",
+    "hbs": "^4.2.0",
     "http-errors": "^1.8.0",
     "moment": "^2.29.1",
     "mongoose": ">=5.11.7",
     "morgan": "^1.10.0",
     "multer-storage-cloudinary": "^4.0.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./bin/www",
