--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./bin/www",
+    "seed:tag": "node ./bin/seeds/tag.js",
+    "seed:sneaker": "node ./bin/seeds/sneaker.js",
+    "seed:user": "node ./bin/seeds/user.js",
+    "seed:all": "npm run seed:tag && npm run seed:sneaker && npm run seed:user",
     "dev": "nodemon ./bin/www -e js,hbs"
   },
   "keywords": [],
